--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,8 @@
 	url = https://github.com/OpenNeuroDatasets/ds000213.git
 	datalad-id = 4e18ae94-8a31-11e8-9103-0242ac120024
 	datalad-url = https://github.com/OpenNeuroDatasets/ds000213.git
+[submodule "sourcedata/templateflow"]
+	path = sourcedata/templateflow
+	url = https://github.com/templateflow/templateflow.git
+	datalad-id = c79c47b6-d0fb-11e8-aa11-64006a8a730f
+	datalad-url = https://github.com/templateflow/templateflow.git
