--- a/.gitmodules
+++ b/.gitmodules
@@ -11,7 +11,7 @@
 	path = sourcedata/raw
 	url = https://github.com/OpenNeuroDatasets/ds000213.git
 	datalad-id = 4e18ae94-8a31-11e8-9103-0242ac120024
-	datalad-url = https://github.com/OpenNeuroDatasets/ds000213.git
+	datalad-url = /scratch1/03201/jbwexler/openneuro_derivatives/raw/ds000213
 [submodule "sourcedata/templateflow"]
 	path = sourcedata/templateflow
 	url = https://github.com/templateflow/templateflow.git
